--- a/passwordgenerator.html
+++ b/passwordgenerator.html
@@ -29,6 +29,6 @@
         </div>
       </div>
     </div>
-    <script src="generatorscript.js"></script>
+    <script src="passgenscript.js"></script>
   </body>
 </html>
