Redone Javascript with function descriptions and calls

--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
         </div>
       </div>
     </div>
-    <script src="passgenscript.js"></script>
+    <script src="passgenscriptfunc.js"></script>
   </body>
 </html>
